--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,40 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.7'
+	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
-
-group = 'com.champlain'
+group = 'com.champsoft'
 version = '0.0.1-SNAPSHOT'
-description = 'Demo project for Spring Boot'
-
+description = 'cardatabase-v2'
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
-
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
 repositories {
 	mavenCentral()
 }
-
 dependencies {
+// --- Core Starters ---
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+// --- Utilities ---
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+// --- Database ---
+	runtimeOnly 'com.h2database:h2'
+// --- Optional DevTools & Monitoring ---
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+// --- Tests ---
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
-
 tasks.named('test') {
 	useJUnitPlatform()
 }
