--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ plugins {
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
-group = 'com.champsoft'
+group = 'com.champlain'
 version = '0.0.1-SNAPSHOT'
-description = 'cardatabase-v2'
+description = 'hospitalappointment'
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
