Final Finished Project

--- a/build.gradle
+++ b/build.gradle
@@ -1,44 +1,34 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.6'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.2.2'   // or your version
+	id 'io.spring.dependency-management' version '1.1.4'
 }
+
 group = 'com.champlain'
 version = '0.0.1-SNAPSHOT'
-description = 'hospitalappointment'
+
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	sourceCompatibility = '17'
 }
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
+
 repositories {
 	mavenCentral()
 }
+
 dependencies {
-	// --- Core Starters ---
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'   // <-- ADD THIS
 
-	// --- Utilities ---
+	implementation 'org.postgresql:postgresql:42.6.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	// --- Database ---
-	runtimeOnly 'com.h2database:h2'
-
-	// --- Optional DevTools & Monitoring ---
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-	// --- Tests ---
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
+
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
